[gd_scene load_steps=6 format=3 uid="uid://d0s43xkx8jx82"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_i3wqx"]
[ext_resource type="Texture2D" uid="uid://dua5ja31k0cn8" path="res://Art/Geryon-Sprite.png" id="2_c8gmg"]
[ext_resource type="Texture2D" uid="uid://08q3333rp5ln" path="res://Art/Geryon-Sprite-Shadow.png" id="3_tapu1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_402m2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v35u0"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_i3wqx")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("2_c8gmg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_402m2")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(-2, 11)
rotation = 0.486272
scale = Vector2(0.804491, 0.67566)
texture = ExtResource("3_tapu1")

[node name="DashTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_v35u0")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
offset_left = -297.0
offset_top = -221.0
offset_right = -257.0
offset_bottom = -181.0
scale = Vector2(14.76, 13.48)
color = Color(0.042, 0.0478, 0.1, 1)

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
